Fix some cases where the caret could be blinking in the URL bar but focus is actually elsewhere.  Bug 89214, r=jkeiser, sr=jst.